--- a/header/index.html
+++ b/header/index.html
@@ -3,7 +3,7 @@
   <head> 
     <title> Header </title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width", initial-scale="1">  <!-- Adapte le site aux écrans -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">  <!-- Adapte le site aux écrans -->
     <link rel="stylesheet" href="styles.css">
   </head>
 
@@ -12,16 +12,16 @@
          <img class="logo" src="??" alt="logo">
          <nav>
              <ul class="nav__links">
-                   <li><a href="#">Accueil</a></li> 
-                   <li><a href="#">À propos de nous </a></li> 
+                   <li><a href="index.html">Accueil</a></li> 
+                   <li><a href="aproposdenous.html">À propos de nous </a></li> 
                    <li><a href="#">Explorer</a></li> 
                    <li><a href="#">S'inscrire</a></li> 
                    <li><a href="#">Se connecter</a></li>
                    <li><a href="#">Mon profil</a></li>
-                   <li><a href="#">Admin</a></li>
-                   
+                   <li><a href="#">Admin</a></li>  
              </ul>
          </nav>
+         <a class="cta" href="#"
 
     </header>
   </body>
