--- a/header/index.html
+++ b/header/index.html
@@ -14,14 +14,13 @@
              <ul class="nav__links">
                    <li><a href="index.html">Accueil</a></li> 
                    <li><a href="aproposdenous.html">À propos de nous </a></li> 
-                   <li><a href="explorer.html">Explorer</a></li> 
-                   <li><a href="sinscrire.html">S'inscrire</a></li> 
-                   <li><a href="seconnecter.html">Se connecter</a></li>
+                   <li><a href="explorer.html">Explorer</a></li>
                    <li><a href="monprofil.html">Mon profil</a></li>
                    <li>-<a href="admin.html">Admin</a></li>  
+                   <li>-<a href="seconnecter.html">Se connecter</a></li>
              </ul>
          </nav>
-         <a class="cta" href="#"
+      
 
     </header>
   </body>
