--- a/header/index.html
+++ b/header/index.html
@@ -4,7 +4,7 @@
     <title> Header </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">  <!-- Adapte le site aux écrans -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
   </head>
 
   <body>
