--- a/header/index.html
+++ b/header/index.html
@@ -20,8 +20,17 @@
                    <li>-<a href="seconnecter.html">Se connecter</a></li>
              </ul>
          </nav>
-      
-
     </header>
+    <main>
+      <h1>Bienvenue sur Wander7</h1>
+      <p>Découvrez les 7 merveilles du monde à travers nos circuits exclusifs.</p>
+  </main>
+
+  <footer>
+      <p>&copy; 2025 Wander7. Tous droits réservés.</p>
+  </footer>
+
+</body>
+</html>
   </body>
 </html>
