ajout d une partie du body

--- a/header/index.html
+++ b/header/index.html
@@ -16,19 +16,48 @@
                    <li><a href="aproposdenous.html">À propos de nous </a></li> 
                    <li><a href="explorer.html">Explorer</a></li>
                    <li><a href="monprofil.html">Mon profil</a></li>
-                   <li>-<a href="admin.html">Admin</a></li>  
-                   <li>-<a href="seconnecter.html">Se connecter</a></li>
+                   <li><a href="admin.html">Admin</a></li>  
+                   <li><a href="seconnecter.html">Se connecter</a></li>
              </ul>
          </nav>
     </header>
     <main>
       <h1>Bienvenue sur Wander7</h1>
       <p>Découvrez les 7 merveilles du monde à travers nos circuits exclusifs.</p>
-  </main>
 
-  <footer>
-      <p>&copy; 2025 Wander7. Tous droits réservés.</p>
-  </footer>
+      <section class="section__container feature__container" id="service">
+        <div class="feature__card">
+          <img src="assets/feature-1.png" alt="feature" />
+          <div>
+            <h4>Destinations incontournables</h4>
+            <p>Explorez les merveilles du monde avec Wander7.</p>
+          </div>
+        </div>
+
+        <div class="feature__card">
+          <img src="assets/feature-2.png" alt="feature" />
+          <div>
+            <h4>Meilleurs prix garantis</h4>
+            <p>Voyagez aux tarifs les plus avantageux avec Wander7.</p>
+          </div>
+        </div>
+
+        <div class="feature__card">
+          <img src="assets/feature-3.png" alt="feature" />
+          <div>
+           <h4>Réservation instantanée</h4>
+           <p>Réservez votre escapade de rêve en un seul clic.</p>           
+          </div>
+        </div>
+      </section>
+  
+      
+    
+</main>
+
+<footer>
+  <p>&copy; 2025 Wander7. Tous droits réservés.</p>
+</footer>
 
 </body>
 </html>
