se connecter page

--- a/all/index.html
+++ b/all/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
   <head> 
-    <title> Header </title>
+    <title> Accueil </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">  <!-- Adapte le site aux écrans -->
     <link rel="stylesheet" href="index.css">
@@ -11,7 +11,7 @@
     <header>
          <img class="logo" src="??" alt="logo">
          <nav>
-             <ul class="nav__links">
+             <ul class="nav_links">
                    <li><a href="index.html">Accueil</a></li> 
                    <li><a href="aproposdenous.html">À propos de nous </a></li> 
                    <li><a href="explorer.html">Explorer</a></li>
@@ -21,6 +21,7 @@
              </ul>
          </nav>
     </header>
+
     <main>
       <h1>Bienvenue sur Wander7</h1>
       <p>Découvrez les 7 merveilles du monde à travers nos circuits exclusifs.</p>
@@ -50,9 +51,6 @@
           </div>
         </div>
       </section>
-  
-      
-    
 </main>
 
 <footer>
@@ -61,5 +59,4 @@
 
 </body>
 </html>
-  </body>
-</html>
+  
