--- a/all/seconnecter.html
+++ b/all/seconnecter.html
@@ -34,12 +34,11 @@
           
 
         <div class="login-col2">
-          <h2>Login</h2>
-          <label for="email" class="login-email">Email Address :</label><br />
+          <label for="email" class="login-email">  Email </label><br />
           <input type="text" id="email" name="email" /><br />
-          <label for="password">Password :</label><br />
+          <label for="password"> Mot de passe </label><br />
           <input type="password" id="password" name="password" /><br />
-          <button class="login-button">Login</button>
+          <button class="login-button"> je me connecte </button>
         </div>
       </div>
     </div>
