--- a/all/seconnecter.html
+++ b/all/seconnecter.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,7 +7,7 @@
 
   <body>
     <header>
-      <img class="logo" src="??" alt="logo">
+      <img class="logo" src="assets/LogoWander7.png" alt="logo">
       <nav>
         <ul class="nav_links">
           <li><a href="index.html">Accueil</a></li>
@@ -21,8 +20,6 @@
       </nav>
     </header>
 
-  
-    </div>
  
     <div class="login-main-container">
       <div class="login-inner-container">
