--- a/all/index.html
+++ b/all/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header>
-         <img class="logo" src="??" alt="logo">
+         <img class="logo" src="assets/LogoWander7.png" alt="logo">
          <nav>
              <ul class="nav_links">
                    <li><a href="index.html">Accueil</a></li> 
