--- a/all/index.html
+++ b/all/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-  <html>
+  <html lang="fr">
   <head> 
-    <title> Accueil </title>
+    <title>Wander7-Accueil </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">  <!-- Adapte le site aux écrans -->
+    <link rel="icon" href="assets/Logo_Wander7_Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="index.css">
   </head>
 
