--- a/all/seconnecter.html
+++ b/all/seconnecter.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Wander7-Se Connecter</title>
+    <link rel="icon" href="assets/Logo_Wander7_Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="seconnecter.css" />
   </head>
 
