Update sinscire.html + sinscrire.css

--- a/all/sinscrire.html
+++ b/all/sinscrire.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulaire d'Inscription</title>
-    <link rel="stylesheet" href="sinscrire.css">
+    <title>Wander7-Formulaire d'Inscription</title>
+    <link rel="icon" href="assets/Logo_Wander7_Favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="sinscrire.css"/>
 </head>
 <body>
 
