link bt seconnecter & sinscrire

--- a/all/seconnecter.html
+++ b/all/seconnecter.html
@@ -38,7 +38,10 @@
           <input type="text" id="email" name="email" /><br />
           <label for="password"> Mot de passe </label><br />
           <input type="password" id="password" name="password" /><br />
-          <button class="login-button"> je me connecte </button>
+          <button class="login-button"> Je me connecte </button>
+          <p class="login-a">Vous n'avez pas de compte ?
+            <a href="sinscrire.html" class="underline-link">Inscrivez vous </a>
+            </p>
         </div>
       </div>
     </div>
