--- a/all/profil.html
+++ b/all/profil.html
@@ -7,7 +7,23 @@
     <link rel="stylesheet" href="profil.css">
     <script src="https://kit.fontawesome.com/yourkitcode.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+     <header>
+        <img class="logo" src="assets/LogoWander7.png" alt="logo">
+          <nav>
+            <ul class="nav_links">
+              <li><a href="index.html">Accueil</a></li>
+              <li><a href="aproposdenous.html">À propos de nous</a></li>
+              <li><a href="explorer.html">Explorer</a></li>
+              <li><a href="monprofil.html">Mon profil</a></li>
+              <li><a href="admin.html">Admin</a></li>
+              <li><a href="seconnecter.html">Se connecter</a></li>
+            </ul>
+          </nav>
+        </header>
+
+
 
     <!-- Titre -->
     <h1 class="profile-title">Mon Profil</h1>
@@ -53,6 +69,14 @@
     <div class="button-container">
         <button class="save-button">Enregistrer les modifications</button>
     </div>
+
+
+
+    <footer>
+        <p>&copy; 2025 Wander7. Tous droits réservés.</p>
+      </footer>
+
+
 
 </body>
 </html>
