--- a/all/sinscrire.html
+++ b/all/sinscrire.html
@@ -16,7 +16,7 @@
                 <li><a href="index.html">Accueil</a></li> 
                 <li><a href="aproposdenous.html">À propos de nous</a></li> 
                 <li><a href="explorer.html">Explorer</a></li>
-                <li><a href="monprofil.html">Mon profil</a></li>
+                <li><a href="profil.html">Mon profil</a></li>
                 <li><a href="admin.html">Admin</a></li>  
                 <li><a href="seconnecter.html">Se connecter</a></li>
             </ul>
