--- a/all/aproposdenous.html
+++ b/all/aproposdenous.html
@@ -19,3 +19,71 @@
         </ul>
       </nav>
     </header>
+
+
+
+    <main class="about-container">
+      <h1>À propos de Wander7</h1>
+      <p class="intro-text">
+          <strong>Découvrez les 7 merveilles du monde à travers nos circuits exclusifs.</strong>
+      </p>
+
+      <!-- Notre Mission -->
+      <section class="about-mission">
+          <h2>Notre Mission</h2>
+          <p>
+              Wander7 a été créé par trois étudiants en ingénierie informatique passionnés de voyages et de nouvelles technologies.
+              Notre objectif est de rendre chaque voyage unique en vous proposant des expériences immersives et adaptées à vos envies.
+          </p>
+      </section>
+
+      <!-- Catégories de Voyages -->
+      <section class="about-categories">
+          <h2>Nos Expériences Uniques</h2>
+          <div class="category">
+              <i class="fa-solid fa-landmark"></i>
+              <h3>🌍 Culturel</h3>
+              <p>Plongez dans l'histoire et les traditions des civilisations du monde.</p>
+          </div>
+          <div class="category">
+              <i class="fa-solid fa-hiking"></i>
+              <h3>⛰️ Aventure</h3>
+              <p>Pour les amateurs de sensations fortes, explorez des terres inconnues.</p>
+          </div>
+          <div class="category">
+              <i class="fa-solid fa-gem"></i>
+              <h3>💎 Luxe</h3>
+              <p>Voyagez avec style et confort grâce à nos prestations haut de gamme.</p>
+          </div>
+          <div class="category">
+              <i class="fa-solid fa-leaf"></i>
+              <h3>🌿 Nature</h3>
+              <p>Reconnectez-vous avec la nature en explorant des paysages époustouflants.</p>
+          </div>
+      </section>
+
+      <!-- L'Équipe -->
+      <section class="about-team">
+          <h2>Notre Équipe</h2>
+          <div class="team-member">
+              <h3>Adam Pineau</h3>
+              <p>Développeur ...</p>
+          </div>
+          <div class="team-member">
+              <h3>Hiba Mesbahi</h3>
+              <p>Développeur ...</p>
+          </div>
+          <div class="team-member">
+              <h3>Alicia Kellai</h3>
+              <p>Développeur ...</p>
+          </div>
+      </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+      <p>&copy; 2025 Wander7. Tous droits réservés.</p>
+  </footer>
+
+</body>
+</html>
