correction css de "explorer"

--- a/all/explorer.html
+++ b/all/explorer.html
@@ -29,7 +29,6 @@
         
             <div id="conteneurEntete">
               <section id="zoneRecherche">
-                <h1>Destination</h1>
                 <h3>Découvrez les 7 Merveilles du Monde</h3>
                 <div id="conteneurChamps">
                   <!-- Sélection de la destination parmi les 7 merveilles -->
@@ -103,7 +102,7 @@
                 <h2>Explorer par type de voyage</h2>
                 <div class="categorie">
                     <h3>Culturel</h3>
-                    <p>Plongez dans l'histoire et les traditions.</p>
+                    <p>Plongez dans les traditions.</p>
                 </div>
                 <div class="categorie">
                     <h3>Aventure</h3>
