--- a/all/sinscrire.html
+++ b/all/sinscrire.html
@@ -86,9 +86,25 @@
 
                 
 
-                <!-- Bouton d'inscription -->
-                <button type="submit" class="signup-button">S'inscrire</button>
-            </form>
+<!-- Cases à cocher pour l'acceptation des conditions -->
+<div class="checkbox-container">
+    <input type="checkbox" id="accept-terms" required>
+    <label for="accept-terms">
+        En soumettant ce formulaire, j'accepte que mes informations soient utilisées exclusivement dans le cadre de ma demande et de la relation commerciale éthique et personnalisée qui pourrait en découler si je le souhaite.
+    </label>
+</div>
+
+<div class="checkbox-container">
+    <input type="checkbox" id="accept-newsletter">
+    <label for="accept-newsletter">
+        J'accepte que mon mail soit utilisé à des fins publicitaires (newsletter, offres exclusives, etc.).
+    </label>
+</div>
+
+
+            <!-- Bouton d'inscription -->
+            <button type="submit" class="signup-button">S'inscrire</button>
+        </form>
         </div>
     </main>
 
